# discovery-converter

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml
.github/workflows/: test.yaml
discovery_converter/: __init__.py  converters.py  data.py  errors.py
discovery_converter/builders/: __init__.py  cloud_run.py
schemas/: cloud_run.json
schemas/discovery_docs/: cloud_run.json
tests/: __init__.py  conftest.py  test_convert.py  test_load_discovery.py  test_load_yaml.py  test_replace_refs.py  test_validate.py  test_write_json.py
tests/fixture_files/: cloudRunDiscovery.json  invalidCloudRunSpec.yaml  invalidSchema.json  validCloudRunSchema.json  validCloudRunSpec.yaml
tests/test_helpers/: __init__.py  path.py
